--- a/styles/style.css
+++ b/styles/style.css
@@ -1,4 +1,8 @@
 
+body{
+    margin: 0;
+    padding: 0;
+}
 /* background-images-style */
 .header{
     background-image: url(../images/developer.png), url(../images/header_bg.png);
@@ -40,10 +44,13 @@ ul li a{
     background-color: #FD6E0A;
     color: white;
     font-weight: bold;
-    padding: 18px 35px;
+    padding: 15px 20px;
     border-radius: 5px;
     opacity: 100%;
     border: none;
+}
+.btn-container{
+    display: flex;
 }
 /* banner styles */
 .banner{
@@ -51,7 +58,7 @@ ul li a{
     justify-content: space-between;
 }
 .contain{
-    margin: 50px 400px 150px 140px;
+    margin: 50px 200px 150px 140px;
 }
 .banner-greeting{
     color: #474747;
@@ -71,11 +78,12 @@ ul li a{
 .primary-btn-1{
     color: #FD6E0A;
     font-weight: bold;
-    padding: 18px 35px;
+    padding: 15px 20px;
     border: 2px solid #FD6E0A;
     border-radius: 5px;
     opacity: 100%;
     margin-left: 20px;
+
 }
 .btn{
     text-align: center;
@@ -231,6 +239,7 @@ footer input[type="text"], input[type="email"]{
     border: 2px solid #FD6E0A;
     border-radius: 5px;
     opacity: 100%;
+    margin-bottom: 50px;
 }
 .footer-comment-box{
     border-radius: 5px;
